# bachelor-task

./: .gitignore  CMakeLists.txt  README.md
config/: config.json  log.conf  logger.toml
docs/: doxyfile.in
include/: a-star.hpp  a_star.hpp  bidirectional_search.hpp  cell_info.hpp  cost.hpp  down_hill_cost.hpp  graph.hpp  heuristic.hpp  matrix.hpp  shortest-path.hpp  shortest_path.hpp  square-grid-graph.hpp  square_grid_graph.hpp  up_hill_cost.hpp
python_scripts/: loader.py
src/: CMakeLists.txt  a-star.cpp  a_star.cpp  bidirectional_search.cpp  cell_info.cpp  cost.cpp  down_hill_cost.cpp  graph.cpp  heuristic.cpp  main.cpp  matrix.cpp  shortest-path.cpp  shortest_path.cpp  square-grid-graph.cpp  square_grid_graph.cpp  up_hill_cost.cpp
test/: CMakeLists.txt  test.cpp
